updating scrkpts for verbalisation

--- a/sentence_retrieval/Sentence_Selection_Port_Test.ipynb
+++ b/sentence_retrieval/Sentence_Selection_Port_Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "id": "compact-dividend",
    "metadata": {},
    "outputs": [
@@ -15,10 +15,10 @@
        " 'dropout': 0.6,\n",
        " 'bert_hidden_dim': 768,\n",
        " 'max_len': 120,\n",
-       " 'cuda': False}"
+       " 'cuda': True}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,10 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "id": "constant-heather",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -77,12 +88,13 @@
     "    {\"id\": 171897, \"evidence\": [[\"Research\", 4, \"To test the validity of instruments , procedures , or experiments , research may replicate elements of prior projects or the project as a whole .\", 0.9998928308486938], [\"Test_validity\", 1, \"In the fields of psychological testing and educational testing , `` validity refers to the degree to which evidence and theory support the interpretations of test scores entailed by proposed uses of tests '' .\", 0.22765414416790009], [\"Experiment\", 3, \"There also exists natural experimental studies .\", 0.16992847621440887], [\"Experiment\", 14, \"This increases the reliability of the results , often through a comparison between control measurements and the other measurements .\", 0.13860490918159485], [\"Experiment\", 9, \"Experiments can vary from personal and informal natural comparisons LRB e.g. tasting a range of chocolates to find a favorite RRB , to highly controlled LRB e.g. tests requiring complex apparatus overseen by many scientists that hope to discover information about subatomic particles RRB .\", 0.10734457522630692]], \"claim\": \"Research is incapable of testing the validity of experiments.\", \"label\": \"REFUTES\"}\n",
     "]\n",
     "\n",
-    "test_inputs = [[process_sent(t['claim']), process_sent(e[2])] for t in test_claim for e in t['evidence']]"
+    "test_inputs = [[process_sent(t['claim']), process_sent(e[2])] for t in test_claim for e in t['evidence']]\n",
+    "len(test_inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "id": "df2ac11d",
    "metadata": {},
    "outputs": [
@@ -93,7 +105,7 @@
        " 'Soul Food is a 1997 American comedy drama film produced by Kenneth \" Babyface \" Edmonds , Tracey Edmonds and Robert Teitel and released by Fox 2000 Pictures .']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,16 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "multiple-yacht",
+   "execution_count": 64,
+   "id": "649be126",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tokenizer could be replaced by this\n",
-    "\n",
     "from transformers import BertTokenizer\n",
-    "\n",
     "tokenizer = BertTokenizer.from_pretrained(args['bert_pretrain'], do_lower_case=False)\n",
+    "\n",
     "encodings =  tokenizer(\n",
     "    test_inputs,\n",
     "    padding='max_length',\n",
@@ -242,18 +253,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "id": "photographic-tolerance",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sentence_retrieval_model import sentence_retrieval_model\n",
     "\n",
@@ -274,18 +277,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "id": "d8b34e3b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+       "array([0.    , 0.0002, 0.0001, 0.0001, 0.0001, 0.    , 0.    , 0.    ,\n",
+       "       0.    , 0.    , 0.    , 0.0002, 0.    , 0.0001, 0.    , 0.    ,\n",
+       "       0.    , 0.    , 0.0004, 0.0001, 0.    , 0.001 , 0.0003, 0.0001,\n",
+       "       0.0002, 0.    , 0.0002, 0.0005, 0.0002, 0.    ])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,23 +303,23 @@
     "with torch.no_grad():\n",
     "    probs = model(inp, msk, seg).tolist()\n",
     "    \n",
-    "# This is the absolure error (rounded to 5 decimal places) between this notebook and the repo's execution\n",
-    "np.abs((np.array(probs) - np.array([e[3] for t in test_claim for e in t['evidence']])).round(5))"
+    "# This is the absolure error (rounded to 4 decimal places) between this notebook and the repo's execution\n",
+    "np.abs((np.array(probs) - np.array([e[3] for t in test_claim for e in t['evidence']])).round(4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 70,
    "id": "chubby-paris",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.9979841709136963]"
+       "[0.9979684352874756]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,19 +338,19 @@
     "    return_tensors='pt',\n",
     ")\n",
     "\n",
-    "inp = encodings['input_ids']\n",
-    "msk = encodings['attention_mask']\n",
-    "seg = encodings['token_type_ids']\n",
+    "inp_t = encodings['input_ids']\n",
+    "msk_t = encodings['attention_mask']\n",
+    "seg_t = encodings['token_type_ids']\n",
     "\n",
     "if args['cuda']:\n",
-    "    inp = inp.cuda()\n",
-    "    msk = msk.cuda()\n",
-    "    seg = seg.cuda()\n",
+    "    inp_t = inp_t.cuda()\n",
+    "    msk_t = msk_t.cuda()\n",
+    "    seg_t = seg_t.cuda()\n",
     "    \n",
     "model.eval()\n",
     "\n",
     "with torch.no_grad():\n",
-    "    probs = model(inp, msk, seg).tolist()\n",
+    "    probs = model(inp_t, msk_t, seg_t).tolist()\n",
     "probs\n",
     "\n",
     "#[0.9979841709136963]"
