--- a/verbalisation/T5-Verbalisation-Test.ipynb
+++ b/verbalisation/T5-Verbalisation-Test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ae4d16bd",
+   "execution_count": 2,
+   "id": "555c25ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "80629b35",
+   "execution_count": 3,
+   "id": "cebf23e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(True, 1)"
+       "(True, 2)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,95 +42,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e4951afb",
+   "execution_count": 13,
+   "id": "d7e3a266",
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL='t5-base'\n",
+    "#MODEL='t5-base'\n",
     "DATA_DIR = './graph2text/data/webnlg'\n",
     "OUTPUT_DIR = './graph2text/outputs/port_test'\n",
-    "CHECKPOINT = './graph2text/outputs/t5-base_13881/val_avg_bleu=68.1000-step_count=5.ckpt'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "51cf7c76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parser = argparse.ArgumentParser()\n",
-    "parser = pl.Trainer.add_argparse_args(parser)\n",
-    "parser = SummarizationModule.add_model_specific_args(parser, os.getcwd())"
+    "CHECKPOINT = './graph2text/outputs/t5-base_13881/val_avg_bleu=68.1000-step_count=5.ckpt'\n",
+    "MAX_LENGTH = 384"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "387c3db9",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "412e0ceb",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "args = parser.parse_args([\n",
-    "    '--data_dir',DATA_DIR,\n",
-    "    '--task','graph2text',\n",
-    "    '--model_name_or_path',MODEL,\n",
-    "    '--eval_batch_size','8',\n",
-    "    '--gpus','1',\n",
-    "    '--output_dir',OUTPUT_DIR,\n",
-    "    '--checkpoint',CHECKPOINT,\n",
-    "    '--max_source_length','384',\n",
-    "    '--max_target_length','384',\n",
-    "    '--val_max_target_length','384',\n",
-    "    '--test_max_target_length','384',\n",
-    "    '--eval_max_gen_length','384',\n",
-    "    '--do_predict',\n",
-    "    '--eval_beams','3'\n",
-    "])"
+    "#parser = argparse.ArgumentParser()\n",
+    "#parser = pl.Trainer.add_argparse_args(parser)\n",
+    "#parser = SummarizationModule.add_model_specific_args(parser, os.getcwd())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "08492736",
+   "id": "eed54939",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "#Path(args.output_dir).mkdir(exist_ok=True)\n",
-    "#model = Graph2TextModule(args)"
+    "#args = parser.parse_args([\n",
+    "#    '--data_dir',DATA_DIR,\n",
+    "#    '--task','graph2text',\n",
+    "#    '--model_name_or_path',MODEL,\n",
+    "#    '--eval_batch_size','8',\n",
+    "#    '--gpus','1',\n",
+    "#    '--output_dir',OUTPUT_DIR,\n",
+    "#    '--checkpoint',CHECKPOINT,\n",
+    "#    '--max_source_length','384',\n",
+    "#    '--max_target_length','384',\n",
+    "#    '--val_max_target_length','384',\n",
+    "#    '--test_max_target_length','384',\n",
+    "#    '--eval_max_gen_length','384',\n",
+    "#    '--do_predict',\n",
+    "#    '--eval_beams','3'\n",
+    "#])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f64ed42b",
+   "id": "ea902e1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "override_args = {\n",
+    "    'data_dir': DATA_DIR,\n",
+    "    'output_dir': OUTPUT_DIR,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "10824d96",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph2Text hparams are: Namespace(logger=True, checkpoint_callback=True, early_stop_callback=False, default_root_dir=None, gradient_clip_val=0, process_position=0, num_nodes=1, num_processes=1, gpus=1, auto_select_gpus=False, log_gpu_memory=None, progress_bar_refresh_rate=1, overfit_batches=0.0, track_grad_norm=-1, check_val_every_n_epoch=1, fast_dev_run=False, accumulate_grad_batches=1, max_epochs=100, min_epochs=1, max_steps=None, min_steps=None, limit_train_batches=1.0, limit_val_batches=1.0, limit_test_batches=1.0, val_check_interval=1.0, log_save_interval=100, row_log_interval=50, distributed_backend=None, sync_batchnorm=False, precision=32, weights_summary='top', weights_save_path=None, num_sanity_val_steps=2, truncated_bptt_steps=None, resume_from_checkpoint=None, profiler=None, benchmark=False, deterministic=False, reload_dataloaders_every_epoch=False, auto_lr_find=False, replace_sampler_ddp=True, terminate_on_nan=False, auto_scale_batch_size=False, prepare_data_per_node=True, amp_backend='native', amp_level='O2', val_percent_check=None, test_percent_check=None, train_percent_check=None, overfit_pct=None, model_name_or_path='t5-base', config_name='', tokenizer_name=None, cache_dir='', encoder_layerdrop=None, decoder_layerdrop=None, dropout=None, attention_dropout=None, learning_rate=3e-05, lr_scheduler='linear', weight_decay=0.0, adam_epsilon=1e-08, warmup_steps=0, num_workers=4, train_batch_size=4, eval_batch_size=4, adafactor=False, output_dir='./graph2text/outputs/port_test', fp16=False, fp16_opt_level='O2', do_train=True, do_predict=True, seed=42, data_dir='./graph2text/data/webnlg', max_source_length=384, max_target_length=384, val_max_target_length=384, test_max_target_length=384, freeze_encoder=False, freeze_embeds=False, sortish_sampler=False, max_tokens_per_batch=None, logger_name='default', n_train=-1, n_val=-1, n_test=-1, task='graph2text', label_smoothing=0.0, src_lang='', tgt_lang='', eval_beams=3, checkpoint=None, val_metric=None, eval_max_gen_length=384, save_top_k=1, early_stopping_patience=15, git_sha='')\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "We have added 3 tokens\n",
-      "parameters Namespace(logger=True, checkpoint_callback=True, early_stop_callback=False, default_root_dir=None, gradient_clip_val=0, process_position=0, num_nodes=1, num_processes=1, gpus=1, auto_select_gpus=False, log_gpu_memory=None, progress_bar_refresh_rate=1, overfit_batches=0.0, track_grad_norm=-1, check_val_every_n_epoch=1, fast_dev_run=False, accumulate_grad_batches=1, max_epochs=100, min_epochs=1, max_steps=None, min_steps=None, limit_train_batches=1.0, limit_val_batches=1.0, limit_test_batches=1.0, val_check_interval=1.0, log_save_interval=100, row_log_interval=50, distributed_backend=None, sync_batchnorm=False, precision=32, weights_summary='top', weights_save_path=None, num_sanity_val_steps=2, truncated_bptt_steps=None, resume_from_checkpoint=None, profiler=None, benchmark=False, deterministic=False, reload_dataloaders_every_epoch=False, auto_lr_find=False, replace_sampler_ddp=True, terminate_on_nan=False, auto_scale_batch_size=False, prepare_data_per_node=True, amp_backend='native', amp_level='O2', val_percent_check=None, test_percent_check=None, train_percent_check=None, overfit_pct=None, model_name_or_path='t5-base', config_name='', tokenizer_name=None, cache_dir='', encoder_layerdrop=None, decoder_layerdrop=None, dropout=None, attention_dropout=None, learning_rate=3e-05, lr_scheduler='linear', weight_decay=0.0, adam_epsilon=1e-08, warmup_steps=0, num_workers=4, train_batch_size=4, eval_batch_size=4, adafactor=False, output_dir='/users/k2031554/Repos/plms-graph2text/webnlg/outputs/t5-base_13881', fp16=False, fp16_opt_level='O2', do_train=True, do_predict=True, seed=42, data_dir='/users/k2031554/Repos/plms-graph2text/webnlg/data/webnlg', max_source_length=384, max_target_length=384, val_max_target_length=384, test_max_target_length=384, freeze_encoder=False, freeze_embeds=False, sortish_sampler=False, max_tokens_per_batch=None, logger_name='default', n_train=-1, n_val=-1, n_test=-1, task='graph2text', label_smoothing=0.0, src_lang='', tgt_lang='', eval_beams=3, checkpoint=None, val_metric=None, eval_max_gen_length=384, save_top_k=1, early_stopping_patience=15, git_sha='')\n",
-      "/users/k2031554/.conda/envs/pipeline/lib/python3.9/site-packages/pytorch_lightning/core/saving.py:212: UserWarning: Found keys that are not in the model state dict but in the checkpoint: ['model.decoder.block.0.layer.1.EncDecAttention.relative_attention_bias.weight']\n",
+      "parameters Namespace(logger=True, checkpoint_callback=True, early_stop_callback=False, default_root_dir=None, gradient_clip_val=0, process_position=0, num_nodes=1, num_processes=1, gpus=1, auto_select_gpus=False, log_gpu_memory=None, progress_bar_refresh_rate=1, overfit_batches=0.0, track_grad_norm=-1, check_val_every_n_epoch=1, fast_dev_run=False, accumulate_grad_batches=1, max_epochs=100, min_epochs=1, max_steps=None, min_steps=None, limit_train_batches=1.0, limit_val_batches=1.0, limit_test_batches=1.0, val_check_interval=1.0, log_save_interval=100, row_log_interval=50, distributed_backend=None, sync_batchnorm=False, precision=32, weights_summary='top', weights_save_path=None, num_sanity_val_steps=2, truncated_bptt_steps=None, resume_from_checkpoint=None, profiler=None, benchmark=False, deterministic=False, reload_dataloaders_every_epoch=False, auto_lr_find=False, replace_sampler_ddp=True, terminate_on_nan=False, auto_scale_batch_size=False, prepare_data_per_node=True, amp_backend='native', amp_level='O2', val_percent_check=None, test_percent_check=None, train_percent_check=None, overfit_pct=None, model_name_or_path='t5-base', config_name='', tokenizer_name=None, cache_dir='', encoder_layerdrop=None, decoder_layerdrop=None, dropout=None, attention_dropout=None, learning_rate=3e-05, lr_scheduler='linear', weight_decay=0.0, adam_epsilon=1e-08, warmup_steps=0, num_workers=4, train_batch_size=4, eval_batch_size=4, adafactor=False, output_dir='./graph2text/outputs/port_test', fp16=False, fp16_opt_level='O2', do_train=True, do_predict=True, seed=42, data_dir='./graph2text/data/webnlg', max_source_length=384, max_target_length=384, val_max_target_length=384, test_max_target_length=384, freeze_encoder=False, freeze_embeds=False, sortish_sampler=False, max_tokens_per_batch=None, logger_name='default', n_train=-1, n_val=-1, n_test=-1, task='graph2text', label_smoothing=0.0, src_lang='', tgt_lang='', eval_beams=3, checkpoint=None, val_metric=None, eval_max_gen_length=384, save_top_k=1, early_stopping_patience=15, git_sha='')\n",
+      "/home/k20036346/.conda/envs/cuda/lib/python3.9/site-packages/pytorch_lightning/core/saving.py:212: UserWarning: Found keys that are not in the model state dict but in the checkpoint: ['model.decoder.block.0.layer.1.EncDecAttention.relative_attention_bias.weight']\n",
       "  rank_zero_warn(\n"
      ]
     }
    ],
    "source": [
-    "model_ckp = Graph2TextModule.load_from_checkpoint(args.checkpoint, strict=False)"
+    "model_ckp = Graph2TextModule.load_from_checkpoint(CHECKPOINT, strict=False, **override_args)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "31e38038",
+   "id": "921439d3",
    "metadata": {},
    "source": [
     "DEALING WITH UNKNOWN TOKENS\n",
@@ -142,8 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "d6ccdd96",
+   "execution_count": 10,
+   "id": "a2c8879e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model_ckp.tokenizer.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "14790d7f",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +173,7 @@
       "         32101,    19,     3,     9, 32102,  7293,     1]])\n",
       "['translate Graph to English:<H> World Trade Center<R> height<T> 200 meter<H> World Trade Center<R> is a<T> tower</s>']\n",
       "['The World Trade Center is a tower with a height of 200 meters.']\n",
-      "2.170738697052002\n"
+      "1.7831895351409912\n"
      ]
     }
    ],
@@ -167,7 +185,7 @@
     "]\n",
     "\n",
     "inputs_encoding = model_ckp.tokenizer(\n",
-    "    inputs, truncation=True, max_length=args.max_source_length, return_tensors='pt'\n",
+    "    inputs, truncation=True, max_length=MAX_LENGTH, return_tensors='pt'\n",
     ")\n",
     "\n",
     "print(inputs_encoding['input_ids'])\n",
@@ -194,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0c405004",
+   "id": "ec123907",
    "metadata": {
     "scrolled": false
    },
@@ -361,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c9d88c6",
+   "id": "eccb6185",
    "metadata": {},
    "source": [
     "# STRATEGY TO REPLACE ??\n",
@@ -382,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7b05cbd8",
+   "id": "129701e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6eef67d9",
+   "id": "ca1b705d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "519a767b",
+   "id": "17e99ed7",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4092700f",
+   "id": "5787eb59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e66010cd",
+   "id": "87377636",
    "metadata": {},
    "source": [
     "## Pilot Sample"
@@ -472,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18d74bdd",
+   "id": "987cf7b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "d864a637",
+   "id": "86269c4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4847491",
+   "id": "bb299b89",
    "metadata": {},
    "source": [
     "## Full Data"
@@ -535,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7530c85b",
+   "id": "f61c5b18",
    "metadata": {
     "scrolled": true
    },
@@ -665,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c7626e44",
+   "id": "e9f4b5a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4d9935c9",
+   "id": "1a76e2db",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a3a0a69c",
+   "id": "b008eb00",
    "metadata": {
     "scrolled": true
    },
@@ -734,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "34e36e32",
+   "id": "2d949ac4",
    "metadata": {
     "scrolled": true
    },
@@ -764,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "3ad2c256",
+   "id": "a568b05e",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0f0607f4",
+   "id": "c82aa7ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "71e8ce33",
+   "id": "e5c4b16e",
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 788,
-   "id": "21162256",
+   "id": "f56f7d8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b5c448a4",
+   "id": "6f5391e0",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e358bc8",
+   "id": "41ebffa8",
    "metadata": {},
    "source": [
     "## Subject and Object Inverted\n",
@@ -1123,9 +1141,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "CUDA 11.2 torch installation",
    "language": "python",
-   "name": "python3"
+   "name": "cuda"
   },
   "language_info": {
    "codemirror_mode": {
