vinished verbalisations, readying sentence selection

--- a/sentence_retrieval/Sentence_Selection_Port_Test.ipynb
+++ b/sentence_retrieval/Sentence_Selection_Port_Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "id": "compact-dividend",
    "metadata": {},
    "outputs": [
@@ -14,11 +14,11 @@
        " 'checkpoint': './checkpoint/model.best.32.pt',\n",
        " 'dropout': 0.6,\n",
        " 'bert_hidden_dim': 768,\n",
-       " 'max_len': 120,\n",
-       " 'cuda': True}"
+       " 'max_len': 384,\n",
+       " 'cuda': False}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,12 +27,12 @@
     "import torch\n",
     "\n",
     "args = {\n",
-    "    'batch_size':32,\n",
+    "    'batch_size': 32,\n",
     "    'bert_pretrain':'./bert_base',\n",
     "    'checkpoint': './checkpoint/model.best.32.pt',\n",
     "    'dropout': 0.6,\n",
     "    'bert_hidden_dim': 768,\n",
-    "    'max_len': 120,\n",
+    "    'max_len': 384,\n",
     "}\n",
     "\n",
     "args['cuda'] = torch.cuda.is_available()\n",
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "constant-heather",
+   "execution_count": 2,
+   "id": "ae57b523",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "30"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,10 +69,10 @@
     "import re\n",
     "\n",
     "def process_sent(sentence):\n",
-    "    sentence = re.sub(\" \\-LSB\\-.*?\\-RSB\\-\", \"\", sentence)\n",
-    "    sentence = re.sub(\"\\-LRB\\- \\-RRB\\- \", \"\", sentence)\n",
-    "    sentence = re.sub(\" -LRB-\", \" ( \", sentence)\n",
-    "    sentence = re.sub(\"-RRB-\", \" )\", sentence)\n",
+    "    sentence = re.sub(\"LSB.*?RSB\", \"\", sentence)\n",
+    "    sentence = re.sub(\"LRB\\s*?RRB\", \"\", sentence)\n",
+    "    sentence = re.sub(\"(\\s*?)LRB((\\s*?))\", \"\\\\1(\\\\2\", sentence)\n",
+    "    sentence = re.sub(\"(\\s*?)RRB((\\s*?))\", \"\\\\1)\\\\2\", sentence)\n",
     "    sentence = re.sub(\"--\", \"-\", sentence)\n",
     "    sentence = re.sub(\"``\", '\"', sentence)\n",
     "    sentence = re.sub(\"''\", '\"', sentence)\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "df2ac11d",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        " 'Soul Food is a 1997 American comedy drama film produced by Kenneth \" Babyface \" Edmonds , Tracey Edmonds and Robert Teitel and released by Fox 2000 Pictures .']"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "id": "649be126",
    "metadata": {},
    "outputs": [],
@@ -253,10 +253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "id": "photographic-tolerance",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex.\n"
+     ]
+    }
+   ],
    "source": [
     "from sentence_retrieval_model import sentence_retrieval_model\n",
     "\n",
@@ -277,20 +285,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "d8b34e3b",
+   "execution_count": 7,
+   "id": "a8b6e3c9",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 [0.999876856803894, 0.13063780963420868, -0.34905505180358887, -0.3883019685745239, -0.4003084897994995, 0.9978696703910828, -0.9245980381965637, -0.998559832572937, -0.9948011040687561, -0.9991973638534546, 0.9993929862976074, 0.09321465343236923, -0.05764476954936981, -0.07538028061389923, -0.07819902896881104, 0.9998263120651245, 0.013729027472436428, 0.01668625883758068, -0.8269160389900208, -0.8524856567382812, 0.9998888373374939, 0.5357280969619751, 0.5267375707626343, -0.2278740108013153, -0.426324725151062, 0.9998928308486938, 0.22765284776687622, 0.1699286848306656, 0.13860446214675903, 0.1970244199037552]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([0.    , 0.0002, 0.0001, 0.0001, 0.0001, 0.    , 0.    , 0.    ,\n",
-       "       0.    , 0.    , 0.    , 0.0002, 0.    , 0.0001, 0.    , 0.    ,\n",
-       "       0.    , 0.    , 0.0004, 0.0001, 0.    , 0.001 , 0.0003, 0.0001,\n",
-       "       0.0002, 0.    , 0.0002, 0.0005, 0.0002, 0.    ])"
+       "array([0.    , 0.    , 0.    , 0.    , 0.    , 0.0006, 0.    , 0.0005,\n",
+       "       0.0034, 0.    , 0.    , 0.167 , 0.    , 0.    , 0.    , 0.    ,\n",
+       "       0.0461, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+       "       0.    , 0.    , 0.    , 0.    , 0.    , 0.0897])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,23 +318,25 @@
     "with torch.no_grad():\n",
     "    probs = model(inp, msk, seg).tolist()\n",
     "    \n",
+    "print(len(probs), probs)\n",
+    "    \n",
     "# This is the absolure error (rounded to 4 decimal places) between this notebook and the repo's execution\n",
     "np.abs((np.array(probs) - np.array([e[3] for t in test_claim for e in t['evidence']])).round(4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "id": "chubby-paris",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.9979684352874756]"
+       "[0.9979841709136963]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
