finished first run on pipeline

--- a/textual_entailment/4_Using_BERT_on_FEVER_with_Trainer_3_Classes_DATASET_V2.ipynb
+++ b/textual_entailment/4_Using_BERT_on_FEVER_with_Trainer_3_Classes_DATASET_V2.ipynb
@@ -140,19 +140,7 @@
    "id": "a81af236",
    "metadata": {},
    "source": [
-    "TAKING UNRELATED TEXT (LOW RETRIEVAL SCORE) TO THE CLAIMS AS 'NOT ENOUGH INFO' MIGHT ALSO BE A GOOD IDEA\n",
-    "--"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c7b90923",
-   "metadata": {},
-   "source": [
-    "# LRB, RRB, etc, are still **probably** left in the SENTENCE RETRIEVAL MODEL's training data, not replaced by parenthesis or anything.\n",
-    "- Confirm this is the case\n",
-    "- Replace them like they are replaced in notebook 3\n",
-    "- Run model again over weekend, see if it performs better"
+    "**Note**: TAKING UNRELATED TEXT (LOW RETRIEVAL SCORE) TO THE CLAIMS AS 'NOT ENOUGH INFO' MIGHT ALSO BE A GOOD IDEA"
    ]
   },
   {
