--- a/textual_entailment/7_Using_BERT_on_FEVER_with_Trainer_3_Classes_DATASET_V2_HYPER.ipynb
+++ b/textual_entailment/7_Using_BERT_on_FEVER_with_Trainer_3_Classes_DATASET_V2_HYPER.ipynb
@@ -292,30 +292,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Feb 23 16:41:47 2022       \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\r\n",
-      "|-------------------------------+----------------------+----------------------+\r\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
-      "|                               |                      |               MIG M. |\r\n",
-      "|===============================+======================+======================|\r\n",
-      "|   0  GeForce RTX 3070    On   | 00000000:5E:00.0 Off |                  N/A |\r\n",
-      "| 30%   28C    P8    17W / 220W |      3MiB /  7982MiB |      0%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "|   1  GeForce RTX 3070    On   | 00000000:AF:00.0 Off |                  N/A |\r\n",
-      "| 30%   27C    P8    19W / 220W |      3MiB /  7982MiB |      0%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "                                                                               \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| Processes:                                                                  |\r\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\r\n",
-      "|        ID   ID                                                   Usage      |\r\n",
-      "|=============================================================================|\r\n",
-      "|  No running processes found                                                 |\r\n",
-      "+-----------------------------------------------------------------------------+\r\n"
+      "Mon Mar 28 12:50:15 2022       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 418.40.04    Driver Version: 418.40.04    CUDA Version: 10.1     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  Tesla V100-PCIE...  Off  | 00000000:D8:00.0 Off |                    0 |\n",
+      "| N/A   33C    P0    25W / 250W |     12MiB / 32480MiB |      0%      Default |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                       GPU Memory |\n",
+      "|  GPU       PID   Type   Process name                             Usage      |\n",
+      "|=============================================================================|\n",
+      "|  No running processes found                                                 |\n",
+      "+-----------------------------------------------------------------------------+\n"
      ]
     }
    ],
